@@ -1,4 +1,4 @@
-C RCS $Id: gnuplot.doc,v 1.446 2007/08/17 20:25:21 sfeam Exp $
+C RCS $Id: gnuplot.doc,v 1.447 2007/08/28 05:56:29 sfeam Exp $
 C
 C Copyright (C) 1986 - 1993, 1998, 1999, 2000, 2001, 2004   Thomas Williams, Colin Kelley et al.
 C
@@ -1579,6 +1579,7 @@ C ... and restart the table:
        |           a|b         * bitwise inclusive OR
        &&          a&&b        * logical AND
        ||          a||b        * logical OR
+       =           a = b         assignment
        .           A.B           string concatenation
        eq          A eq B        string equality
        ne          A ne B        string inequality
@@ -1606,6 +1607,7 @@ C ... and restart the table:
 #\verb~|~ & \verb~a|b~ & * bitwise inclusive OR\\
 #\verb~&&~ & \verb~a&&b~ & * logical AND\\
 #\verb~||~ & \verb~a||b~ & * logical OR\\
+#\verb~=~ & \verb~a = b~ & assignment\\
 #\verb~.~ & \verb~A.B~ & string concatenation\\
 #\verb~eq~ & \verb~A eq B~ & string equality\\
 #\verb~ne~ & \verb~A ne B~ & string inequality\\
@@ -1629,6 +1631,7 @@ C ... and restart the table:
 %|@a|b@* bitwise inclusive OR
 %&&@a&&b@* logical AND
 %||@a||b@* logical OR
+%=@a = b@assignment
 %.@a.b@string concatenation
 %eq@A eq B@string equality
 %ne@A ne B@string inequality
